# career_caddy_api

./: .dockerignore  .env.example  .gitignore  .ok  CLAUDE.md  Caddyfile  Dockerfile  README.md  SECURITY_AUDIT.md  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  manage.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: ci.yml  deploy.yml  docker.yml
deploy/: docker-compose.yml
job_hunting/: __init__.py  admin.py  apps.py  asgi.py  logfire_setup.py  profile_models.py  serializers.py  settings.py  signals.py  sse_asgi.py  urls.py  views.py  wsgi.py
job_hunting/api/: authentication.py  chat.py  events.py  middleware.py  parsers.py  permissions.py  pydantic_models.py  renderers.py  serializers.py  throttling.py  views.py
job_hunting/lib/: a2a_client.py  ai_client.py  as_object.py  browser_manager.py  cloud_tasks.py  db.py  events.py  federation_dispatch.py  federation_inbox.py  federation_ingest.py  federation_signing.py  job_kinds.py  job_post_merge.py  mcp_client.py  pricing.py  remote_playwright_client.py  schedule_kinds.py  scraper.py  screenshot_store.py  slug.py  tasks.py  text_signals.py  tracker_resolver.py  url_canonicalize.py  url_policy.py  username_policy.py  vetting_reasons.py
job_hunting/middleware/: sqlalchemy_session.py
job_hunting/migrations/: 0001_status_django_model.py  0002_profile.py  0002_skill_django_model.py  0003_description_django_model.py  0004_certification_django_model.py  0005_education_django_model.py  0006_summary.py  0007_remove_summary_job_post_fk.py  0008_remove_summary_user_fk.py  0009_profile.py  0010_remove_profile_user_fk.py  0011_company.py  0012_api_key_django_model.py  0013_question_django_model.py  0014_remove_question_sa_fkeys.py  0015_remove_answer_question_sa_fkey.py  0016_job_post_django_model.py  0017_remove_job_post_sa_fkeys.py  0018_remove_sa_auth_user_fkeys.py  0019_wave2_django_models.py  0020_wave3_join_table_django_models.py  0021_rename_application_to_jobapplication.py  0022_alter_profile_links.py  0023_rename_application_table.py  0024_job_post_link_unique.py  0025_job_post_salary_location_remote.py  0026_cover_letter_state_answer_state.py  0027_summary_status.py  0028_scrape_state_to_status.py  0029_add_logged_at_to_job_application_status.py  0030_add_status_to_score.py  0031_question_job_post_fk.py  0032_profile_is_guest.py  0033_waitlist.py  0034_add_created_by_to_scrape.py  0035_ai_usage.py  0036_score_created_at.py  0037_invitation.py  0038_scrapestatus.py  0039_seed_scrape_statuses.py  (+97 more)
job_hunting/models/: __init__.py  actor.py  ai_usage.py  answer.py  api_key.py  application.py  base.py  certification.py  company.py  company_alias.py  cover_letter.py  description.py  duplicate_annotation.py  education.py  experience.py  experience_description.py  federation_activity.py  federation_follower.py  invitation.py  job.py  job_application.py  job_application_status.py  job_post.py  job_post_dedupe.py  job_post_description_decision.py  job_post_discovery.py  job_post_overwrite_decision.py  match_request.py  nanoid_pk.py  profile.py  project.py  project_description.py  question.py  resume.py  resume_certification.py  resume_education.py  resume_experience.py  resume_project.py  resume_skill.py  resume_summary.py  (+9 more)
job_hunting/signals/: __init__.py  federation.py
job_hunting/tests/: __init__.py  (+179 more)
migrations/: add_favorite_columns.py
scripts/: entrypoint.sh  qcluster-web.sh  qcluster_web.py
templates/: admin_new_signup.txt  cover_letter_prompt.j2  invitation_email.txt  job_parser_prompt.j2  job_scorer_prompt.j2  orgmode_export_prompt.j2  password_reset_email.txt  resume_export.docx  resume_markdown.j2  resume_styles.docx  summary_service_prompt.j2  test_email.txt  update_resume_export.jinja2  waitlist_email.txt  welcome_email.txt
(+114 files in other folders)
